[US39T55] Fixing clipping issue in login component.

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -77,6 +77,7 @@ Purple: #8e7cc3
 
 .SidebarUserSignUp {
     background-color: #d4eff7;
+	margin: 5vh;
 }
 .SidebarUserProfile{
     height:13vh;
